--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@
 /jvmbasicc.jar
 /.settings/
 /.project
+/demo/jvmbasicrt.jar
+/demo/jvmbasicc.jar
+/demo/demo.tar.gz
+/demo/bottlesofbeer.jar
+/demo/BOTTLESOFBEER.class
