implemented automatic recompile of modified BAS files static content is served up
Signed-off-by: Tom Everett <tome@criticalmass.com>

--- a/jvmbasicwww/pom.xml
+++ b/jvmbasicwww/pom.xml
@@ -40,6 +40,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
