various fixes and hardening
Signed-off-by: Tom Everett <tome@criticalmass.com>

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<module>jvmbasicc</module>
 		<module>jvmbasicwww</module>
 		<module>jvmbasicmojo</module>
-		<module>examples</module>
+		<!-- <module>examples</module>  -->
 	</modules>
 	<build>
 		<plugins>
