--- a/examples/bottlesofbeer/pom.xml
+++ b/examples/bottlesofbeer/pom.xml
@@ -4,13 +4,18 @@
 	<groupId>com.khubla.jvmbasic.examples</groupId>
 	<artifactId>bottlesofbeer</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
 	<name>khubla.com jvmBasic Bottles of Beer</name>
+	<parent>
+		<groupId>com.khubla.jvmbasic.examples</groupId>
+		<artifactId>examples</artifactId>
+		<version>1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicrt</artifactId>
-			<version>1.0</version>
+			<version>1.1-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
