--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -4,8 +4,14 @@
 	<groupId>com.khubla.jvmbasic.examples</groupId>
 	<artifactId>examples</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>khubla.com jvmBasic Examples Super POM</name>
+	<parent>
+		<groupId>com.khubla.jvmbasic</groupId>
+		<artifactId>jvmBasic</artifactId>
+		<version>1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<modules>
 		<module>example1</module>
 		<module>bottlesofbeer</module>
