[maven-release-plugin] prepare release jvmBasic-1.3

--- a/jvmbasicwww/pom.xml
+++ b/jvmbasicwww/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.khubla.jvmbasic</groupId>
 		<artifactId>jvmBasic</artifactId>
-		<version>1.3-SNAPSHOT</version>
+		<version>1.3</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<dependencies>
@@ -28,14 +28,14 @@
 		<dependency>
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicc</artifactId>
-			<version>1.3-SNAPSHOT</version>
+			<version>1.3</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicrt</artifactId>
-			<version>1.3-SNAPSHOT</version>
+			<version>1.3</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
