--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.khubla.jvmbasic</groupId>
 	<artifactId>jvmBasic</artifactId>
 	<packaging>pom</packaging>
-	<version>1.4-SNAPSHOT</version>
+	<version>1.4</version>
 	<name>khubla.com jvmbasic</name>
 	<properties>
 		<commons-cli.version>1.2</commons-cli.version>
