--- a/examples/bottlesofbeer/pom.xml
+++ b/examples/bottlesofbeer/pom.xml
@@ -1,21 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.khubla.jvmbasic.examples</groupId>
 	<artifactId>bottlesofbeer</artifactId>
 	<packaging>jar</packaging>
 	<name>khubla.com jvmBasic Bottles of Beer</name>
 	<parent>
-		<groupId>com.khubla.jvmbasic.examples</groupId>
+		<groupId>com.khubla.jvmbasic</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.6-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicrt</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.6-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
