--- a/jvmbasicrt/pom.xml
+++ b/jvmbasicrt/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.khubla.jvmbasic</groupId>
 		<artifactId>jvmBasic</artifactId>
-		<version>1.6</version>
+		<version>1.6-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<dependencies>
