--- a/examples/example1/pom.xml
+++ b/examples/example1/pom.xml
@@ -23,6 +23,13 @@
 			<plugin>
 				<groupId>com.khubla.jvmbasic</groupId>
 				<artifactId>jvmbasic-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jvmbasic</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
