--- a/examples/example1/pom.xml
+++ b/examples/example1/pom.xml
@@ -26,7 +26,7 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>jvmbasic</goal>
+							<goal>compile</goal>
 						</goals>
 					</execution>
 				</executions>
