--- a/jvmbasicmojo/pom.xml
+++ b/jvmbasicmojo/pom.xml
@@ -1,9 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.khubla.jvmbasic</groupId>
+
+
+	<parent>
+		<groupId>com.khubla.jvmbasic</groupId>
+		<artifactId>jvmBasic</artifactId>
+		<version>1.6-SNAPSHOT</version>
+	</parent>
 	<artifactId>jvmbasic-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.6-SNAPSHOT</version>
+
 	<name>khubla.com jvmBasic Maven Mojo</name>
 	<properties>
 		<maven.version>3.0.5</maven.version>
@@ -13,14 +20,11 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
 			<version>${maven.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.khubla.jvmbasic</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>jvmbasicc</artifactId>
-			<version>1.6-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugin-testing</groupId>
@@ -32,7 +36,6 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-core</artifactId>
 			<version>${maven.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -40,47 +43,40 @@
 			<version>${maven.version}</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
-			<artifactId>maven-plugin-tools-annotations</artifactId>
+			<artifactId>maven-plugin-annotations</artifactId>
 			<version>3.2</version>
+			<scope>provided</scope>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>3.2</version>
 				<configuration>
-					<!-- see http://jira.codehaus.org/browse/MNG-5346 -->
-					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+					<goalPrefix>jvmbasic</goalPrefix>
 				</configuration>
 				<executions>
 					<execution>
-						<id>mojo-descriptor</id>
+						<id>default-descriptor</id>
 						<goals>
 							<goal>descriptor</goal>
 						</goals>
+						<phase>process-classes</phase>
+					</execution>
+					<execution>
+						<id>help-descriptor</id>
+						<goals>
+							<goal>helpmojo</goal>
+						</goals>
+						<phase>process-classes</phase>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
-		<finalName>${project.artifactId}-${project.version}</finalName>
 	</build>
-	<distributionManagement>
-		<repository>
-			<id>jvmBasic-maven</id>
-			<name>jvmBasic Maven Mojo Repository</name>
-			<url>file://repo</url>
-			<layout>default</layout>
-		</repository>
-	</distributionManagement>
 </project>
