--- a/jvmbasicwww/pom.xml
+++ b/jvmbasicwww/pom.xml
@@ -1,56 +1,46 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>jvmbasicwww</artifactId>
-	<packaging>jar</packaging>
-	<name>khubla.com jvmBasic WWW Server</name>
+
 	<parent>
 		<groupId>com.khubla.jvmbasic</groupId>
 		<artifactId>jvmBasic</artifactId>
 		<version>1.6-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
 	</parent>
+
+	<artifactId>jvmbasicwww</artifactId>
+
+	<name>khubla.com jvmBasic WWW Server</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>${testng.version}</version>
-			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
-			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.khubla.jvmbasic</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>jvmbasicc</artifactId>
-			<version>1.6-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.khubla.jvmbasic</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>jvmbasicrt</artifactId>
-			<version>1.6-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>${commons-io.version}</version>
-			<type>jar</type>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2</version>
 				<executions>
 					<execution>
 						<id>make-my-jar-with-dependencies</id>
