--- a/pom.xml
+++ b/pom.xml
@@ -1,82 +1,82 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.khubla.jvmbasic</groupId>
-	<artifactId>jvmBasic</artifactId>
-	<packaging>pom</packaging>
-	<version>2.0-SNAPSHOT</version>
-	<name>khubla.com jvmbasic</name>
-	<properties>
-		<commons-cli.version>1.2</commons-cli.version>
-		<commons-io.version>2.4</commons-io.version>
-		<testng.version>6.8.5</testng.version>
-		<log4j.version>1.2.17</log4j.version>
-		<target.jvm>1.6</target.jvm>
-	</properties>
-	<modules>
-		<module>jvmbasicrt</module>
-		<module>jvmbasicc</module>
-		<module>jvmbasicwww</module>
-		<module>jvmbasicmojo</module>
-		<module>examples</module>
-	</modules>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>${target.jvm}</source>
-					<target>${target.jvm}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<aggregate>true</aggregate>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.2</version>
-			</plugin>
-		</plugins>
-	</build>
-	<developers>
-		<developer>
-			<email>tom@khubla.com</email>
-			<name>Tom Everett</name>
-			<id>khubla</id>
-			<roles>
-				<role>Original developer</role>
-			</roles>
-		</developer>
-	</developers>
-	<distributionManagement>
-		<repository>
-			<id>jvmBasic</id>
-			<name>jvmBasic Repository</name>
-			<url>file://repo</url>
-			<layout>default</layout>
-		</repository>
-	</distributionManagement>
-	<scm>
-		<connection>scm:git:git@github.com:teverett/jvmBASIC.git</connection>
-		<developerConnection>scm:git:git@github.com:teverett/jvmBASIC.git</developerConnection>
-		<url>https://github.com/teverett/jvmBASIC.git</url>
-	</scm>
-	<organization>
-		<name>khubla.com</name>
-		<url>http://www.khubla.com</url>
-	</organization>
-	<licenses>
-		<license>
-			<name>GNU General Public License, version 3</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-</project>	
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>com.khubla.jvmbasic</groupId>
+   <artifactId>jvmBasic</artifactId>
+   <packaging>pom</packaging>
+   <version>2.0-SNAPSHOT</version>
+   <name>khubla.com jvmbasic</name>
+   <properties>
+      <commons-cli.version>1.2</commons-cli.version>
+      <commons-io.version>2.4</commons-io.version>
+      <testng.version>6.8.5</testng.version>
+      <target.jvm>1.6</target.jvm>
+      <logback.version>1.0.13</logback.version>
+   </properties>
+   <modules>
+      <module>jvmbasicrt</module>
+      <module>jvmbasicc</module>
+      <module>jvmbasicwww</module>
+      <module>jvmbasicmojo</module>
+      <module>examples</module>
+   </modules>
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.0</version>
+            <configuration>
+               <source>${target.jvm}</source>
+               <target>${target.jvm}</target>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9</version>
+            <configuration>
+               <aggregate>true</aggregate>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.2</version>
+         </plugin>
+      </plugins>
+   </build>
+   <developers>
+      <developer>
+         <email>tom@khubla.com</email>
+         <name>Tom Everett</name>
+         <id>khubla</id>
+         <roles>
+            <role>Original developer</role>
+         </roles>
+      </developer>
+   </developers>
+   <distributionManagement>
+      <repository>
+         <id>jvmBasic</id>
+         <name>jvmBasic Repository</name>
+         <url>file://repo</url>
+         <layout>default</layout>
+      </repository>
+   </distributionManagement>
+   <scm>
+      <connection>scm:git:git@github.com:teverett/jvmBASIC.git</connection>
+      <developerConnection>scm:git:git@github.com:teverett/jvmBASIC.git</developerConnection>
+      <url>https://github.com/teverett/jvmBASIC.git</url>
+   </scm>
+   <organization>
+      <name>khubla.com</name>
+      <url>http://www.khubla.com</url>
+   </organization>
+   <licenses>
+      <license>
+         <name>GNU General Public License, version 3</name>
+         <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+         <distribution>repo</distribution>
+      </license>
+   </licenses>
+</project>
