--- a/jvmbasicc/pom.xml
+++ b/jvmbasicc/pom.xml
@@ -61,6 +61,14 @@
          <artifactId>logback-classic</artifactId>
          <version>${logback.version}</version>
       </dependency>
+      <dependency>
+         <!--  include the runtime in the test scope so we can run class files -->
+         <groupId>com.khubla.jvmbasic</groupId>
+         <artifactId>jvmbasicrt</artifactId>
+         <version>2.0-SNAPSHOT</version>
+         <type>jar</type>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
