--- a/examples/example1/pom.xml
+++ b/examples/example1/pom.xml
@@ -23,6 +23,7 @@
          <plugin>
             <groupId>com.khubla.jvmbasic</groupId>
             <artifactId>jvmbasic-maven-plugin</artifactId>
+            <version>2.0-SNAPSHOT</version>
             <executions>
                <execution>
                   <goals>
