--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -21,6 +21,7 @@
          <plugin>
             <groupId>com.khubla.jvmbasic</groupId>
             <artifactId>jvmbasic-maven-plugin</artifactId>
+            <version>2.0-SNAPSHOT</version>
             <executions>
                <execution>
                   <goals>
