--- a/jvmbasicc/pom.xml
+++ b/jvmbasicc/pom.xml
@@ -1,125 +1,126 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <artifactId>jvmbasicc</artifactId>
-   <packaging>jar</packaging>
-   <name>khubla.com jvmBasic Compiler</name>
-   <parent>
-      <groupId>com.khubla.jvmbasic</groupId>
-      <artifactId>jvmBasic</artifactId>
-      <version>2.1-SNAPSHOT</version>
-      <relativePath>../pom.xml</relativePath>
-   </parent>
-   <properties>
-      <asm.version>5.0.4</asm.version>
-      <antlr.version>4.5</antlr.version>
-   </properties>
-   <dependencies>
-      <dependency>
-         <groupId>commons-cli</groupId>
-         <artifactId>commons-cli</artifactId>
-         <version>${commons-cli.version}</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.testng</groupId>
-         <artifactId>testng</artifactId>
-         <version>${testng.version}</version>
-         <type>jar</type>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.antlr</groupId>
-         <artifactId>antlr4-runtime</artifactId>
-         <version>${antlr.version}</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.ow2.asm</groupId>
-         <artifactId>asm</artifactId>
-         <version>${asm.version}</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.ow2.asm</groupId>
-         <artifactId>asm-tree</artifactId>
-         <version>${asm.version}</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.ow2.asm</groupId>
-         <artifactId>asm-commons</artifactId>
-         <version>${asm.version}</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-      <dependency>
-         <groupId>ch.qos.logback</groupId>
-         <artifactId>logback-classic</artifactId>
-         <version>${logback.version}</version>
-      </dependency>
-      <dependency>
-         <!--  include the runtime in the test scope so we can run class files -->
-         <groupId>com.khubla.jvmbasic</groupId>
-         <artifactId>jvmbasicrt</artifactId>
-         <version>2.1-SNAPSHOT</version>
-         <type>jar</type>
-         <scope>test</scope>
-      </dependency>
-   </dependencies>
-   <build>
-      <plugins>
-         <plugin>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr4-maven-plugin</artifactId>
-            <version>${antlr.version}</version>
-            <configuration>
-               <grammars>jvmBasic.g4</grammars>
-               <outputDirectory>src/main/java</outputDirectory>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.4</version>
-            <configuration>
-               <archive>
-                  <manifest>
-                     <addClasspath>true</addClasspath>
-                     <mainClass>com.khubla.jvmbasic.jvmbasicc.JVMBasic</mainClass>
-                  </manifest>
-               </archive>
-            </configuration>
-         </plugin>
-         <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>2.2</version>
-            <executions>
-               <execution>
-                  <id>make-my-jar-with-dependencies</id>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>single</goal>
-                  </goals>
-                  <configuration>
-                     <finalName>jvmbasicc</finalName>
-                     <attach>false</attach>
-                     <appendAssemblyId>false</appendAssemblyId>
-                     <descriptors>
-                        <descriptor>src/main/assembly/assembly.xml</descriptor>
-                     </descriptors>
-                     <archive>
-                        <manifest>
-                           <mainClass>com.khubla.jvmbasic.jvmbasicc.JVMBasic</mainClass>
-                        </manifest>
-                     </archive>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-      </plugins>
-   </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>jvmbasicc</artifactId>
+	<packaging>jar</packaging>
+	<name>khubla.com jvmBasic Compiler</name>
+	<parent>
+		<groupId>com.khubla.jvmbasic</groupId>
+		<artifactId>jvmBasic</artifactId>
+		<version>2.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<properties>
+		<asm.version>5.0.4</asm.version>
+		<antlr.version>4.5</antlr.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>${commons-cli.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4-runtime</artifactId>
+			<version>${antlr.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>${asm.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-tree</artifactId>
+			<version>${asm.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-commons</artifactId>
+			<version>${asm.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<!-- include the runtime in the test scope so we can run class files -->
+			<groupId>com.khubla.jvmbasic</groupId>
+			<artifactId>jvmbasicrt</artifactId>
+			<version>2.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.antlr</groupId>
+				<artifactId>antlr4-maven-plugin</artifactId>
+				<version>${antlr.version}</version>
+				<configuration>
+					<grammars>jvmBasic.g4</grammars>
+					<outputDirectory>src/main/java</outputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.khubla.jvmbasic.jvmbasicc.JVMBasic</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<id>make-my-jar-with-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<finalName>jvmbasicc</finalName>
+							<attach>false</attach>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptors>
+								<descriptor>src/main/assembly/assembly.xml</descriptor>
+							</descriptors>
+							<archive>
+								<manifest>
+									<mainClass>com.khubla.jvmbasic.jvmbasicc.JVMBasic</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
