--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,9 @@
-.DS_Store
-/jvmbasicwww/.settings/org.maven.ide.eclipse.prefs
-/jvmbasicwww/.settings/org.eclipse.jdt.core.prefs
-/jvmbasicwww/.project
-/jvmbasicwww/.classpath
-/jvmbasicmojo/.settings/org.maven.ide.eclipse.prefs
-/jvmbasicmojo/.settings/org.eclipse.jdt.core.prefs
-/jvmbasicmojo/.project
-/jvmbasicmojo/.classpath
-/examples/helloworld/.settings/org.maven.ide.eclipse.prefs
-/examples/helloworld/.settings/org.eclipse.jdt.core.prefs
-/examples/helloworld/.project
-/examples/helloworld/.classpath
-/examples/example1/.settings/org.maven.ide.eclipse.prefs
-/examples/example1/.settings/org.eclipse.jdt.core.prefs
-/examples/example1/.project
-/examples/example1/.classpath
-/examples/bottlesofbeer/.settings/org.maven.ide.eclipse.prefs
-/examples/bottlesofbeer/.settings/org.eclipse.jdt.core.prefs
-/examples/bottlesofbeer/.project
-/examples/bottlesofbeer/.classpath
-/examples/.settings/org.maven.ide.eclipse.prefs
-/examples/.project
-/jvmbasicrt/test-output/
-/jvmbasicwww/target/
-/jvmbasicmojo/target/
-/examples/helloworld/target/
-/examples/example1/target/
-/examples/bottlesofbeer/target/
-/print.jar
-/PRINT.class
-/jvmbasicrt.jar
-/jvmbasicc.jar
-/.settings/
-/.project
-/demo/jvmbasicrt.jar
-/demo/jvmbasicc.jar
-/demo/demo.tar.gz
-/demo/bottlesofbeer.jar
-/demo/BOTTLESOFBEER.class
-/jvmbasicwww/classfiles/
-/jvmbasicc/E.class
-/jvmbasicwww/.settings/
-/jvmbasicmojo/.settings/
-/target/
-/examples/example1/.settings/
-/examples/helloworld/.settings/
-/examples/bottlesofbeer/.settings/
-/examples/.settings/
-/jvmbasicc/test-output/
-
-/jvmbasicc/parsetree/
-
-/jvmbasicc/jvmbasic-test-output/
+/**/*.log
+/**/.DS_Store
+/**/.project
+/**/.classpath
+/**/.settings/
+/**/target
+/**/test-output
+jvmbasicc/jvmbasic-test-output
+jvmbasicwww/classfiles
