--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -13,5 +13,6 @@
       <module>example1</module>
       <module>bottlesofbeer</module>
       <module>helloworld</module>
+      <module>oregontrail</module>
    </modules>
 </project>
