remove oregontrail until the compile error is fixed

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /**/test-output
 jvmbasicc/jvmbasic-test-output
 jvmbasicwww/classfiles
+demo/jvmbasicrt.jar
+demo/jvmbasicc.jar
+demo/demo.tar.gz
+demo/bottlesofbeer.jar
