--- a/jvmbasicc/pom.xml
+++ b/jvmbasicc/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>jvmbasicc</artifactId>
 	<packaging>jar</packaging>
@@ -7,12 +6,12 @@
 	<parent>
 		<groupId>com.khubla.jvmbasic</groupId>
 		<artifactId>jvmBasic</artifactId>
-		<version>2.1-SNAPSHOT</version>
+		<version>2.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<properties>
 		<asm.version>5.0.4</asm.version>
-		<antlr.version>4.5</antlr.version>
+		<antlr.version>4.5.3</antlr.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,7 +65,7 @@
 			<!-- include the runtime in the test scope so we can run class files -->
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicrt</artifactId>
-			<version>2.1-SNAPSHOT</version>
+			<version>2.2-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
