--- a/examples/example1/pom.xml
+++ b/examples/example1/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicrt</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -24,7 +24,7 @@
 			<plugin>
 				<groupId>com.khubla.jvmbasic</groupId>
 				<artifactId>jvmbasic-maven-plugin</artifactId>
-				<version>2.2-SNAPSHOT</version>
+				<version>${project.version}</version>
 				<executions>
 					<execution>
 						<goals>
