--- a/jvmbasicc/pom.xml
+++ b/jvmbasicc/pom.xml
@@ -65,7 +65,7 @@
 			<!-- include the runtime in the test scope so we can run class files -->
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicrt</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
