--- a/jvmbasicmojo/pom.xml
+++ b/jvmbasicmojo/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>com.khubla.jvmbasic</groupId>
 			<artifactId>jvmbasicc</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
