--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ jdk:
 #  - oraclejdk7
   - oraclejdk8
 #  - openjdk7
-sudo: required   
+sudo: required
+build_script:
+  - mvn clean package install   
 env:
   global:
    # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
